--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿attrs==23.1.0
+attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
 bs4==0.0.1
@@ -11,6 +11,7 @@ cryptography==41.0.2
 DateTime==5.2
 exceptiongroup==1.1.2
 Flask==2.3.2
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.4
 imutils==0.5.4
@@ -22,11 +23,11 @@ outcome==1.2.0
 packaging==23.1
 Pillow==10.0.0
 pycparser==2.21
-pyOpenSSL==23.2.0
 PySocks==1.7.1
 pytesseract==0.3.10
 pytz==2023.3
 requests==2.31.0
+selenium==4.11.2
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
